# SCGMS-Build-System

./: .gitignore
linux/Preprocessor/: CMakeLists.txt  make.sh  preprocessor
linux/Preprocessor/sources/: main.cpp
linux/Preprocessor/sources/utils/: file_templates.cpp  file_templates.h  file_utils.cpp  file_utils.h
linux/build_script/: build_docker.sh  prepare_build.py  preprocessor  run_docker.sh  test.py
linux/build_script/build_dir/Wasm_emcc/: CMakeLists.txt  make.sh
linux/build_script/build_dir/Wasm_emcc/sources/filters/: config.h
linux/build_script/build_dir/Wasm_emcc/sources/filters/data_filter/src/: descriptor.h
linux/build_script/build_dir/Wasm_emcc/sources/filters/modify_filter/src/: descriptor.h
linux/build_script/build_dir/Wasm_emcc/sources/filters/print_filter/src/: descriptor.h
linux/build_script/docker/: Dockerfile  architecture  script.sh
linux/build_script/docker_env/: Dockerfile  architecture  script.sh
linux/build_script/input/data_filter/src/: data_filter.cpp
linux/build_script/input/print_filter/src/: print_filter.cpp
